# LPD

./: .gitignore  CITATION.cff  Makefile  README.md  allmols_combined_transitions.csv  check_line.py  check_line_test.py  generate_golden_spectrum.py  get_spectrum.py  get_spectrum_CASA.py  get_spectrum_test.py  liner.py  lines.txt  main.py  main_step1.py  main_step2.py  memoir.py  run-local.sh  setup.cfg  tox.ini
cube.image/logtable/: table.f0
cube.image/mask0/: table.f0_TSM0
cube.mask/: table.f0
cube.mask/logtable/: table.f0
cube.mask/mask0/: table.f0  table.f0_TSM0
examples/: member_uid_A001_X133d_X19a3_GM_Aur_sci_spw35_cube_I_pbcor_spectrum.txt
images/member.uid___A001_X133d_X3abb.HOPS-007_sci.spw0.cube.I.manual.image.pbcor.im/logtable/: table.f0
images/member.uid___A001_X133d_X3abb.HOPS-007_sci.spw0.cube.I.manual.mask.mask/logtable/: table.f0
molecules/: 13CO.tsv  13CS.tsv  C15N.tsv  C17O.tsv  C18O.tsv  C34S.tsv  CCD.tsv  CCH.tsv  CH+.tsv  CH3CN_v=0.ods  CH3CN_v=0.tsv  CH3OH.ods  CH3OH.tsv  CN.tsv  CO-1.txt  CO.tsv  CS.tsv  H2CO.tsv  H2CS.tsv  H2O.tsv  H2S.tsv  HC3N_v=0.ods  HC3N_v=0.tsv  HCN.tsv  HCO+.tsv  HCOOH.ods  HCOOH.tsv  N2D+.tsv  N2H+.tsv  NH3_v=0.tsv  OH.tsv  SO.tsv  c-C3H2_cmds.ods  c-C3H2_cmds.tsv  lines.ods  lines.txt.ods
sanity_checks/: sanity_checks.py  spectrum.txt  spectrum_viewer.txt
scripts/: memoir
src/memoir/: __init__.py  check_line.py
src/memoir/data/: allmols_combined_transitions.csv
tests/: test_check_line.py
tests/data/: spectrum_golden.txt
