[metadata]
name = memoir-lpd
version = 0.11
author = Ana Karla Díaz Rodríguez
author_email = diaz.rodriguez.a.k@gmail.com
description = Spectral molecular line detection for ALMA Archive High Level Data Products.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://akdiaz.xyz/memoir
project_urls =
    Bug Tracker = https://github.com/akdiaz/LPD/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.0
install_requires =
    astropy
    importlib-resources
    matplotlib
    numpy
    pandas
    scipy
scripts =
  scripts/memoir

[options.packages.find]
where = src

[options.package_data]
memoir = data/*.csv
